JumpScript/tests/baselines/reference/methodSignatureHandledDeclarationKindForSymbol.errors.txt
tests/cases/compiler/methodSignatureHandledDeclarationKindForSymbol.jump(6,5): error TS2717: Subsequent property declarations must have the same type.  Property 'bold' must be of type '() => string', but here has type 'string'.


==== tests/cases/compiler/methodSignatureHandledDeclarationKindForSymbol.jump (1 errors) ====
    interface Foo {
        bold(): string;
    }
    
    interface Foo {
        bold: string;
        ~~~~
!!! error TS2717: Subsequent property declarations must have the same type.  Property 'bold' must be of type '() => string', but here has type 'string'.
    }
    
    